Set heading font family

--- a/public/global.css
+++ b/public/global.css
@@ -1,1 +1,2 @@
 @import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Noto+Serif+KR&display=swap');
