Disable user text selection for buttons and the app header

--- a/public/global.css
+++ b/public/global.css
@@ -1,2 +1,6 @@
 @import url('https://necolas.github.io/normalize.css/8.0.1/normalize.css');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&family=Noto+Serif+KR&display=swap');
+
+button {
+  user-select: none;
+}
